1.ConfigComponent加载方式调整 2.机器人Console创建命令: CreateRobot --Num=10

--- a/Robot/Hotfix/Robot.Hotfix.csproj
+++ b/Robot/Hotfix/Robot.Hotfix.csproj
@@ -52,13 +52,27 @@
             <Link>Module\NetworkTCP\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Assets\Hotfix\Demo\**\*.cs">
+        <Compile Include="..\..\Unity\Assets\Hotfix\Demo\**\*.cs"> 
             <Link>Demo\%(RecursiveDir)%(FileName)%(Extension)</Link>
+        </Compile>
+
+        <Compile Include="..\..\Unity\Assets\Hotfix\Module\Config\**\*.cs">
+            <Link>Module\Config\%(RecursiveDir)%(FileName)%(Extension)</Link>
+        </Compile>
+
+        <Compile Include="..\..\Server\Hotfix\Module\Console\**\*.cs">
+            <Link>Module\Console\%(RecursiveDir)%(FileName)%(Extension)</Link>
+        </Compile>
+
+        <Compile Include="..\..\Server\Hotfix\Config\**\*.cs">
+            <Link>Config\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
     </ItemGroup>
     
     <ItemGroup>
-      <Folder Include="Robot" />
+      <Folder Include="..\..\Server\Hotfix\Helper">
+        <Link>Helper</Link>
+      </Folder>
     </ItemGroup>
 
 </Project>
