增加进程管理App: Watcher, Watcher是一个守护进程，一台物理机只有一个，可以用来管理该物理机上的进程 目前实现了一键启动该物理机所有进程的功能，使用方式如下: dotnet Server.dll --AppType=Watcher --Console=1 Watcher会把StartProcessConfig中，配置在该物理机上的进程启动起来，并且创建进程上的Scenes 关闭Watcher会把Watcher启动的进程全部关闭

--- a/Server/App/Server.App.csproj
+++ b/Server/App/Server.App.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>ET</RootNamespace>
     <LangVersion>8</LangVersion>
+    <AssemblyName>Server</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -23,10 +24,6 @@
     <OutputPath>..\..\Bin\</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NLog" Version="4.7.10" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Model\Server.Model.csproj" />
