--- a/Robot/App/Robot.App.csproj
+++ b/Robot/App/Robot.App.csproj
@@ -4,6 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>ET</RootNamespace>
+        <AssemblyName>Robot</AssemblyName>
     </PropertyGroup>
 
     <PropertyGroup>
