--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -114,6 +114,15 @@
 	</targets>
 
 	<targets async="true">
+		<target name="Watcher" xsi:type="File"
+				openFileCacheTimeout="10"
+				keepFileOpen="true"
+				fileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.Debug.log"
+				deleteOldFileOnStartup="false"
+				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
+	</targets>
+
+	<targets async="true">
 		<target name="RobotConsole" xsi:type="Console" layout="${message}" />
 	</targets>
 
@@ -128,5 +137,6 @@
 		<logger ruleName="RobotWarn" name="Robot" minlevel="Warn" maxlevel="Warn" writeTo="RobotWarn" />
 		<logger ruleName="RobotError" name="Robot" minlevel="Error" maxlevel="Error" writeTo="RobotError" />
 		<logger ruleName="RobotConsole" name="Robot" minlevel="Warn" maxlevel="Error" writeTo="RobotConsole" />
+		<logger ruleName="Watcher" name="Watcher" minlevel="Trace" maxlevel="Error" writeTo="Watcher" />
 	</rules>
 </nlog>
