--- a/Unity/Assets/Model/Unity.Model.asmdef
+++ b/Unity/Assets/Model/Unity.Model.asmdef
@@ -2,7 +2,8 @@
     "name": "Unity.Model",
     "rootNamespace": "ET",
     "references": [
-        "Unity.ThirdParty"
+        "Unity.ThirdParty",
+        "Unity.Mono"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
