--- a/Unity/Unity.Mono.csproj
+++ b/Unity/Unity.Mono.csproj
@@ -31,7 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn></NoWarn>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -41,7 +41,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn></NoWarn>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup>
@@ -52,12 +52,32 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Mono\Core\Helper\NetworkHelper.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\Init.cs" />
+     <Compile Include="Assets\Mono\Core\Async\ETCancellationToken.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\ReferenceCollector.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\EnumHelper.cs" />
+     <Compile Include="Assets\Mono\Core\Async\ETTask.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\FileHelper.cs" />
+     <Compile Include="Assets\Mono\Core\Async\AsyncETVoidMethodBuilder.cs" />
+     <Compile Include="Assets\Mono\Core\Async\AsyncMethodBuilderAttribute.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\UILayerScript.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\ByteHelper.cs" />
+     <Compile Include="Assets\Mono\Core\Async\IAwaiter.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\JsonHelper.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\RandomHelper.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\GizmosDebug.cs" />
+     <Compile Include="Assets\Mono\Core\Async\AsyncETTaskCompletedMethodBuilder.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\ZipHelper.cs" />
+     <Compile Include="Assets\Mono\Core\Async\AsyncETTaskMethodBuilder.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\MD5Helper.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\ObjectHelper.cs" />
+     <Compile Include="Assets\Mono\Core\Async\ETVoid.cs" />
+     <Compile Include="Assets\Mono\Core\Async\ETTaskCompleted.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\ComponentView.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\CanvasConfig.cs" />
+     <Compile Include="Assets\Mono\Core\Helper\StringHelper.cs" />
+     <Compile Include="Assets\Mono\Core\Async\ETTaskHelper.cs" />
      <None Include="Assets\Mono\Unity.Mono.asmdef" />
  <Reference Include="UnityEngine">
  <HintPath>/Applications/Unity/Hub/Editor/2020.3.11f1c1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
@@ -652,6 +672,10 @@
  </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Unity.ThirdParty.csproj">
+      <Project>{d2ad5be1-263a-9a30-ab0f-dc5b08044350}</Project>
+      <Name>Unity.ThirdParty</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
