将ExcelExport跟Proto2CS整合到Server工程中，这两个工具只是两种AppType 启动ExcelExport: dotnet Server.dll AppType=ExcelExport --Console=1
启动Proto2CS:
dotnet Server.dll AppType=Proto2CS --Console=1

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -136,12 +136,16 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.9.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ThirdParty\protobuf-net\protobuf-net.csproj" />
     <ProjectReference Include="..\..\ThirdParty\ShareLib\ShareLib.csproj" />
     <ProjectReference Include="..\..\ThirdParty\UnityEngine\UnityEngine.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="ExcelExporter\Template.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
