--- a/Robot/Model/Robot.Model.csproj
+++ b/Robot/Model/Robot.Model.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath> 
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
@@ -51,6 +51,14 @@
 
         <Compile Include="..\..\Server\Model\Module\NetworkTCP\**\*.cs">
             <Link>Module\NetworkTCP\%(RecursiveDir)%(FileName)%(Extension)</Link>
+        </Compile>
+
+        <Compile Include="..\..\Server\Model\Module\MessageInner\**\*.cs">
+            <Link>Module\MessageInner\%(RecursiveDir)%(FileName)%(Extension)</Link>
+        </Compile>
+
+        <Compile Include="..\..\Unity\Assets\Model\Module\Ping\**\*.cs">
+            <Link>Module\Ping\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
         <Compile Include="..\..\Unity\Assets\Model\Module\Message\**\*.cs">
