--- a/Server/Hotfix/Server.Hotfix.csproj
+++ b/Server/Hotfix/Server.Hotfix.csproj
@@ -25,21 +25,6 @@
     <Compile Include="..\..\Unity\Assets\Hotfix\Module\Config\ConfigComponentSystem.cs">
       <Link>Module\Config\ConfigComponentSystem.cs</Link>
     </Compile>
-    <Compile Include="..\..\Unity\Assets\Hotfix\Module\Message\MessageDispatcherComponentSystem.cs">
-      <Link>Module\Message\MessageDispatcherComponentSystem.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Hotfix\Module\Message\NetKcpComponentSystem.cs">
-      <Link>Module\Message\NetKcpComponentSystem.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Hotfix\Module\Message\NetThreadComponentSystem.cs">
-      <Link>Module\Message\NetThreadComponentSystem.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Hotfix\Module\Message\SessionAcceptTimeoutComponentSystem.cs">
-      <Link>Module\Message\SessionAcceptTimeoutComponentSystem.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Hotfix\Module\Message\SessionIdleCheckerComponentSystem.cs">
-      <Link>Module\Message\SessionIdleCheckerComponentSystem.cs</Link>
-    </Compile>
     <Compile Include="..\..\Unity\Assets\Hotfix\Module\Numeric\NumericChangeEvent_NotifyWatcher.cs">
       <Link>Module\Numeric\NumericChangeEvent_NotifyWatcher.cs</Link>
     </Compile>
@@ -49,6 +34,10 @@
 
     <Compile Include="..\..\Unity\Assets\Hotfix\Module\AI\**\*.cs">
       <Link>Module\AI\%(RecursiveDir)%(FileName)%(Extension)</Link>
+    </Compile>
+
+    <Compile Include="..\..\Unity\Assets\Hotfix\Module\Message\**\*.cs">
+      <Link>Module\Message\%(RecursiveDir)%(FileName)%(Extension)</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
