--- a/Unity/Unity.Mono.csproj
+++ b/Unity/Unity.Mono.csproj
@@ -52,35 +52,71 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Mono\XLua\Src\ObjectTranslatorPool.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\LuaTable.cs" />
+     <Compile Include="Assets\Mono\XLua\util\Xxtea.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\LuaDLL.cs" />
      <Compile Include="Assets\Mono\Core\Helper\NetworkHelper.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\Init.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\Utils.cs" />
      <Compile Include="Assets\Mono\Core\Async\ETCancellationToken.cs" />
      <Compile Include="Assets\Mono\Core\Helper\ProcessHelper.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\ReferenceCollector.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\RawObject.cs" />
      <Compile Include="Assets\Mono\Core\Helper\EnumHelper.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\TemplateEngine\TemplateEngine.cs" />
      <Compile Include="Assets\Mono\Core\Async\ETTask.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\MethodWarpsCache.cs" />
+     <Compile Include="Assets\Mono\Interpreter\Interpreter.cs" />
      <Compile Include="Assets\Mono\Core\Helper\FileHelper.cs" />
      <Compile Include="Assets\Mono\Core\ThreadSynchronizationContext.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\ObjectPool.cs" />
      <Compile Include="Assets\Mono\Core\Async\AsyncETVoidMethodBuilder.cs" />
      <Compile Include="Assets\Mono\Core\Async\AsyncMethodBuilderAttribute.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\LuaBase.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\UILayerScript.cs" />
      <Compile Include="Assets\Mono\Core\Helper\ByteHelper.cs" />
      <Compile Include="Assets\Mono\Core\Async\IAwaiter.cs" />
+     <Compile Include="Assets\Mono\XLua\LuaEntry.cs" />
+     <Compile Include="Assets\Mono\XLua\LuaLoader.cs" />
      <Compile Include="Assets\Mono\Core\Helper\JsonHelper.cs" />
      <Compile Include="Assets\Mono\Core\Helper\RandomHelper.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\GenAttributes.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\GizmosDebug.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\LuaFunction.cs" />
      <Compile Include="Assets\Mono\Core\Async\AsyncETTaskCompletedMethodBuilder.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\ObjectCasters.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\SignatureLoader.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\TypeExtensions.cs" />
      <Compile Include="Assets\Mono\Core\Helper\ZipHelper.cs" />
+     <Compile Include="Assets\Mono\Helper\PathHelper.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\ObjectTranslator.cs" />
      <Compile Include="Assets\Mono\Core\Async\AsyncETTaskMethodBuilder.cs" />
      <Compile Include="Assets\Mono\Core\Helper\MD5Helper.cs" />
      <Compile Include="Assets\Mono\Core\Helper\ObjectHelper.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\LuaEnv.cs" />
      <Compile Include="Assets\Mono\Core\Async\ETVoid.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\CodeEmit.cs" />
      <Compile Include="Assets\Mono\Core\Async\ETTaskCompleted.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\LuaException.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\DelegateBridge.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\GenericDelegateBridge.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\ComponentView.cs" />
      <Compile Include="Assets\Mono\MonoBehaviour\CanvasConfig.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\CopyByValue.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\LuaAsset.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\StaticLuaCallbacks.cs" />
+     <Compile Include="Assets\Mono\Helper\StreamHelper.cs" />
+     <Compile Include="Assets\Mono\XLua\Src\InternalGlobals.cs" />
+     <Compile Include="Assets\Mono\Helper\LoadHelper.cs" />
      <Compile Include="Assets\Mono\Core\Helper\StringHelper.cs" />
      <Compile Include="Assets\Mono\Core\Async\ETTaskHelper.cs" />
+     <Compile Include="Assets\Mono\Define.cs" />
+     <None Include="Assets\Mono\XLua\Resources\xlua\util.lua.txt" />
+     <None Include="Assets\Mono\XLua\Resources\perf\profiler.lua.txt" />
+     <None Include="Assets\Mono\XLua\Resources\perf\memory.lua.txt" />
      <None Include="Assets\Mono\Unity.Mono.asmdef" />
+     <None Include="Assets\Mono\XLua\Resources\tdr\tdr.lua.txt" />
  <Reference Include="UnityEngine">
  <HintPath>/Applications/Unity/Hub/Editor/2020.3.18f1c1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
