客户端不需要StructBsonSerialize这个类，放到Editor中

--- a/Robot/Model/Robot.Model.csproj
+++ b/Robot/Model/Robot.Model.csproj
@@ -25,6 +25,9 @@
         <Compile Include="..\..\Unity\Assets\Editor\Helper\MongoHelper.cs">
           <Link>Base\MongoHelper.cs</Link>
         </Compile>
+        <Compile Include="..\..\Unity\Assets\Editor\Helper\StructBsonSerialize.cs">
+          <Link>Base\StructBsonSerialize.cs</Link>
+        </Compile>
         <Compile Include="..\..\Unity\Assets\Model\Module\Config\**\*.cs">
             <Link>Module\Config\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
