1.加入ILRuntime Package 2.参考焦先生，字母哥的项目，使用AssemblyBuilder把4个程序集编译成一个，方便后面ILRuntime加载

--- a/.gitignore
+++ b/.gitignore
@@ -56,9 +56,7 @@ Server/.DS_Store
 /Unity/Unity.Model.csproj
 /Unity/Unity.ModelView.csproj
 /Unity/Unity.ThirdParty.csproj
-/Unity/Assets/Bundles/Lua/ModelView
-/Unity/Assets/Bundles/Lua/Hotfix
-/Unity/Assets/Bundles/Lua/HotfixView
-/Unity/Assets/Bundles/Lua/Model
-/Unity/Assets/Mono/XLua/Gen
-/Unity/Assets/Res/Code
+/Unity/Assets/Bundles/Code/Code.dll.bytes
+/Unity/Assets/Bundles/Code/Code.dll.bytes.meta
+/Unity/Assets/Bundles/Code/Code.pdb.bytes
+/Unity/Assets/Bundles/Code/Code.pdb.bytes.meta
