--- a/Unity/Assets/HotfixView/Unity.HotfixView.asmdef
+++ b/Unity/Assets/HotfixView/Unity.HotfixView.asmdef
@@ -1,6 +1,5 @@
 {
     "name": "Unity.HotfixView",
-    "rootNamespace": "ET",
     "references": [
         "GUID:703e1d0810996ed4b9064f1041de8bdc",
         "GUID:997f003cfffd9ec4fae70c0ac9b0ec2b",
@@ -8,7 +7,9 @@
         "GUID:bebd02018e98e44409a761968a7cbcd9",
         "GUID:6e17cd4649ea94c0cb18f30a60b9b4b4"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
