--- a/Unity/Assets/Mono/Unity.Mono.asmdef
+++ b/Unity/Assets/Mono/Unity.Mono.asmdef
@@ -1,8 +1,8 @@
 {
     "name": "Unity.Mono",
-    "rootNamespace": "ET",
     "references": [
-        "GUID:bebd02018e98e44409a761968a7cbcd9"
+        "GUID:bebd02018e98e44409a761968a7cbcd9",
+        "GUID:7a1fa966b0ea23f40a6a4dc4dab1e297"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
