--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -57,131 +57,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Codes\Model\Core\DoubleMap.cs" />
-    <Compile Include="Codes\Model\Core\ETCancelationTokenHelper.cs" />
-    <Compile Include="Codes\Model\Core\Entity\EntitySceneFactory.cs" />
-    <Compile Include="Codes\Model\Core\Entity\Game.cs" />
-    <Compile Include="Codes\Model\Core\Entity\Scene.cs" />
-    <Compile Include="Codes\Model\Core\Entity\SceneType.cs" />
-    <Compile Include="Codes\Model\Core\Entity\TimerComponent.cs" />
-    <Compile Include="Codes\Model\Core\Event\EventAttribute.cs" />
-    <Compile Include="Codes\Model\Core\Event\IEvent.cs" />
-    <Compile Include="Codes\Model\Core\HashSetComponent.cs" />
-    <Compile Include="Codes\Model\Core\ListComponent.cs" />
-    <Compile Include="Codes\Model\Core\Log\FileLogger.cs" />
-    <Compile Include="Codes\Model\Core\Log\ILog.cs" />
-    <Compile Include="Codes\Model\Core\Log\Log.cs" />
-    <Compile Include="Codes\Model\Core\Log\NLogger.cs" />
-    <Compile Include="Codes\Model\Core\Log\UnityLogger.cs" />
-    <Compile Include="Codes\Model\Core\MultiDictionary.cs" />
-    <Compile Include="Codes\Model\Core\MultiMap.cs" />
-    <Compile Include="Codes\Model\Core\MultiMapSet.cs" />
-    <Compile Include="Codes\Model\Core\Object\BaseAttribute.cs" />
-    <Compile Include="Codes\Model\Core\Object\Entity.cs" />
-    <Compile Include="Codes\Model\Core\Object\EntityEventAttribute.cs" />
-    <Compile Include="Codes\Model\Core\Object\EventSystem.cs" />
-    <Compile Include="Codes\Model\Core\Object\HideInHierarchy.cs" />
-    <Compile Include="Codes\Model\Core\Object\IAwakeSystem.cs" />
-    <Compile Include="Codes\Model\Core\Object\IDeserializeSystem.cs" />
-    <Compile Include="Codes\Model\Core\Object\IDestroySystem.cs" />
-    <Compile Include="Codes\Model\Core\Object\ILateUpdateSystem.cs" />
-    <Compile Include="Codes\Model\Core\Object\ILoadSystem.cs" />
-    <Compile Include="Codes\Model\Core\Object\ISerializeToEntity.cs" />
-    <Compile Include="Codes\Model\Core\Object\ISystemType.cs" />
-    <Compile Include="Codes\Model\Core\Object\IUpdateSystem.cs" />
-    <Compile Include="Codes\Model\Core\Object\IdGenerater.cs" />
-    <Compile Include="Codes\Model\Core\Object\NoMemoryCheck.cs" />
-    <Compile Include="Codes\Model\Core\Object\NoObjectPool.cs" />
-    <Compile Include="Codes\Model\Core\Object\Object.cs" />
-    <Compile Include="Codes\Model\Core\Object\ObjectPool.cs" />
-    <Compile Include="Codes\Model\Core\Object\ObjectSystemAttribute.cs" />
-    <Compile Include="Codes\Model\Core\Object\ProtoObject.cs" />
-    <Compile Include="Codes\Model\Core\Object\TimeInfo.cs" />
-    <Compile Include="Codes\Model\Core\ObjectWait.cs" />
-    <Compile Include="Codes\Model\Core\Options.cs" />
-    <Compile Include="Codes\Model\Core\Pool.cs" />
-    <Compile Include="Codes\Model\Core\ProtobufHelper.cs" />
-    <Compile Include="Codes\Model\Core\QueueDictionary.cs" />
-    <Compile Include="Codes\Model\Core\Scene\SceneHelper.cs" />
-    <Compile Include="Codes\Model\Core\Scene\ZoneSceneFlagComponent.cs" />
-    <Compile Include="Codes\Model\Core\Scene\ZoneSceneManagerComponent.cs" />
-    <Compile Include="Codes\Model\Core\TimeHelper.cs" />
-    <Compile Include="Codes\Model\Core\UnOrderMultiMap.cs" />
-    <Compile Include="Codes\Model\Core\UnOrderMultiMapSet.cs" />
-    <Compile Include="Codes\Model\Demo\AI\XunLuoPathComponent.cs" />
-    <Compile Include="Codes\Model\Demo\EventType.cs" />
-    <Compile Include="Codes\Model\Demo\Helper\PositionHelper.cs" />
-    <Compile Include="Codes\Model\Demo\Move\MoveComponent.cs" />
-    <Compile Include="Codes\Model\Demo\Session\SessionComponent.cs" />
-    <Compile Include="Codes\Model\Demo\SessionStreamDispatcherType.cs" />
-    <Compile Include="Codes\Model\Demo\Unit\Unit.cs" />
-    <Compile Include="Codes\Model\Demo\Unit\UnitComponent.cs" />
-    <Compile Include="Codes\Model\Demo\WaitType.cs" />
-    <Compile Include="Codes\Model\Generate\Config\AIConfig.cs" />
-    <Compile Include="Codes\Model\Generate\Config\StartMachineConfig.cs" />
-    <Compile Include="Codes\Model\Generate\Config\StartProcessConfig.cs" />
-    <Compile Include="Codes\Model\Generate\Config\StartSceneConfig.cs" />
-    <Compile Include="Codes\Model\Generate\Config\StartZoneConfig.cs" />
-    <Compile Include="Codes\Model\Generate\Config\UnitConfig.cs" />
-    <Compile Include="Codes\Model\Generate\Message\OuterMessage.cs" />
-    <Compile Include="Codes\Model\Generate\Message\OuterOpcode.cs" />
-    <Compile Include="Codes\Model\Module\AI\AAIHandler.cs" />
-    <Compile Include="Codes\Model\Module\AI\AIComponent.cs" />
-    <Compile Include="Codes\Model\Module\AI\AIConfig.cs" />
-    <Compile Include="Codes\Model\Module\AI\AIDispatcherComponent.cs" />
-    <Compile Include="Codes\Model\Module\Actor\IActorMessage.cs" />
-    <Compile Include="Codes\Model\Module\ActorLocation\ActorResponse.cs" />
-    <Compile Include="Codes\Model\Module\ActorLocation\IActorLocationMessage.cs" />
-    <Compile Include="Codes\Model\Module\Config\ConfigAttribute.cs" />
-    <Compile Include="Codes\Model\Module\Config\ConfigComponent.cs" />
-    <Compile Include="Codes\Model\Module\Config\IConfig.cs" />
-    <Compile Include="Codes\Model\Module\Config\IConfigLoader.cs" />
-    <Compile Include="Codes\Model\Module\CoroutineLock\CoroutineLock.cs" />
-    <Compile Include="Codes\Model\Module\CoroutineLock\CoroutineLockComponent.cs" />
-    <Compile Include="Codes\Model\Module\CoroutineLock\CoroutineLockQueue.cs" />
-    <Compile Include="Codes\Model\Module\CoroutineLock\CoroutineLockQueueType.cs" />
-    <Compile Include="Codes\Model\Module\CoroutineLock\CoroutineLockTimer.cs" />
-    <Compile Include="Codes\Model\Module\CoroutineLock\CoroutineLockType.cs" />
-    <Compile Include="Codes\Model\Module\Message\AMHandler.cs" />
-    <Compile Include="Codes\Model\Module\Message\ErrorCode.cs" />
-    <Compile Include="Codes\Model\Module\Message\IMHandler.cs" />
-    <Compile Include="Codes\Model\Module\Message\IMessage.cs" />
-    <Compile Include="Codes\Model\Module\Message\ISessionStreamDispatcher.cs" />
-    <Compile Include="Codes\Model\Module\Message\MessageAttribute.cs" />
-    <Compile Include="Codes\Model\Module\Message\MessageDispatcherComponent.cs" />
-    <Compile Include="Codes\Model\Module\Message\MessageHandlerAttribute.cs" />
-    <Compile Include="Codes\Model\Module\Message\MessagePackHelper.cs" />
-    <Compile Include="Codes\Model\Module\Message\MessagePool.cs" />
-    <Compile Include="Codes\Model\Module\Message\MessageProxy.cs" />
-    <Compile Include="Codes\Model\Module\Message\MessageSerializeHelper.cs" />
-    <Compile Include="Codes\Model\Module\Message\NetKcpComponent.cs" />
-    <Compile Include="Codes\Model\Module\Message\NetThreadComponent.cs" />
-    <Compile Include="Codes\Model\Module\Message\OpcodeHelper.cs" />
-    <Compile Include="Codes\Model\Module\Message\OpcodeTypeComponent.cs" />
-    <Compile Include="Codes\Model\Module\Message\ResponseTypeAttribute.cs" />
-    <Compile Include="Codes\Model\Module\Message\RpcException.cs" />
-    <Compile Include="Codes\Model\Module\Message\Session.cs" />
-    <Compile Include="Codes\Model\Module\Message\SessionAcceptTimeoutComponent.cs" />
-    <Compile Include="Codes\Model\Module\Message\SessionCallbackComponent.cs" />
-    <Compile Include="Codes\Model\Module\Message\SessionIdleCheckerComponent.cs" />
-    <Compile Include="Codes\Model\Module\Message\SessionStreamDispatcher.cs" />
-    <Compile Include="Codes\Model\Module\Message\SessionStreamDispatcherAttribute.cs" />
-    <Compile Include="Codes\Model\Module\Network\AChannel.cs" />
-    <Compile Include="Codes\Model\Module\Network\AService.cs" />
-    <Compile Include="Codes\Model\Module\Network\Circularbuffer.cs" />
-    <Compile Include="Codes\Model\Module\Network\KChannel.cs" />
-    <Compile Include="Codes\Model\Module\Network\KService.cs" />
-    <Compile Include="Codes\Model\Module\NetworkTCP\PacketParser.cs" />
-    <Compile Include="Codes\Model\Module\NetworkTCP\TChannel.cs" />
-    <Compile Include="Codes\Model\Module\NetworkTCP\TService.cs" />
-    <Compile Include="Codes\Model\Module\Numeric\INumericWatcher.cs" />
-    <Compile Include="Codes\Model\Module\Numeric\NumericComponent.cs" />
-    <Compile Include="Codes\Model\Module\Numeric\NumericType.cs" />
-    <Compile Include="Codes\Model\Module\Numeric\NumericWatcherAttribute.cs" />
-    <Compile Include="Codes\Model\Module\Numeric\NumericWatcherComponent.cs" />
-    <Compile Include="Codes\Model\Module\Ping\PingComponent.cs" />
-    <Compile Include="Codes\Model\Module\UnityWebRequest\UnityWebRequestAsync.cs" />
-    <Compile Include="Codes\Model\Module\UnityWebRequest\UnityWebRequestRenewalAsync.cs" />
+    <Compile Include="Codes\Model\**\*.cs" />
     <Reference Include="UnityEngine">
       <HintPath>./Temp/bin/Debug/UnityEngine.dll</HintPath>
     </Reference>
