--- a/Unity/Unity.ModelView.csproj
+++ b/Unity/Unity.ModelView.csproj
@@ -57,25 +57,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Codes\ModelView\Demo\Camera\CameraComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\Entry.cs" />
-    <Compile Include="Codes\ModelView\Demo\Global\GlobalComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\Opera\OperaComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\Resource\ResourcesComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\Resource\ResourcesLoaderComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\Scene\SceneChangeComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\UI\UILoading\UILoadingComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\UI\UILobby\UILobbyComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\UI\UILogin\UILoginComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\Unit\AnimatorComponent.cs" />
-    <Compile Include="Codes\ModelView\Demo\Unit\GameObjectComponent.cs" />
-    <Compile Include="Codes\ModelView\Module\UI\AUIEvent.cs" />
-    <Compile Include="Codes\ModelView\Module\UI\LayerNames.cs" />
-    <Compile Include="Codes\ModelView\Module\UI\UI.cs" />
-    <Compile Include="Codes\ModelView\Module\UI\UIComponent.cs" />
-    <Compile Include="Codes\ModelView\Module\UI\UIEventAttribute.cs" />
-    <Compile Include="Codes\ModelView\Module\UI\UIEventComponent.cs" />
-    <Compile Include="Codes\ModelView\Module\UI\UIType.cs" />
+    <Compile Include="Codes\ModelView\**\*.cs" />
     <Reference Include="UnityEngine">
       <HintPath>./Temp/bin/Debug/UnityEngine.dll</HintPath>
     </Reference>
@@ -641,9 +623,6 @@
       <Project>{5910fa29-5797-199c-985b-fc9fc473328e}</Project>
       <Name>Unity.Mono</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\ModelView\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
