修复打包进不去场景的bug

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Server/.DS_Store
 /Unity/Assets/Bundles/Code/Code.dll.bytes.meta
 /Unity/Assets/Bundles/Code/Code.pdb.bytes
 /Unity/Assets/Bundles/Code/Code.pdb.bytes.meta
+/Unity/Assembly-CSharp.csproj
