--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Server/.DS_Store
 /Unity/Assets/Bundles/Code/Code.pdb.bytes
 /Unity/Assets/Bundles/Code/Code.pdb.bytes.meta
 /Unity/Assembly-CSharp.csproj
+/Excel/~$*.xlsx
